# aoc-2022

./: .gitignore  CMakeLists.txt
01/: 01.cpp
02/: 02.cpp
03/: 03.cpp
04/: 04.cpp
05/: 05.cpp
06/: 06.cpp
07/: 07.cpp
08/: 08.cpp
09/: 09.cpp
10/: 10.cpp
11/: 11.cpp
12/: 12.cpp
13/: 13.cpp
14/: 14.cpp
15/: 15.cpp
