cmake_minimum_required(VERSION 3.23.3)

project(aoc-2022 LANGUAGES CXX)

# set(CMAKE_CXX_FLAGS "-O3 -Wall -Wextra")
set(CMAKE_CXX_COMPILER clang++)
set(CMAKE_CXX_STANDARD 20)

add_executable(1 01/01.cpp)

add_executable(2 02/02.cpp)

add_executable(3 03/03.cpp)

add_executable(4 04/04.cpp)

add_executable(5 05/05.cpp)

add_executable(6 06/06.cpp)

add_executable(7 07/07.cpp)

add_executable(8 08/08.cpp)

add_executable(9 09/09.cpp)

add_executable(10 10/10.cpp)

add_executable(11 11/11.cpp)

add_executable(12 12/12.cpp)

add_executable(13 13/13.cpp)

add_executable(14 14/14.cpp)
